# distance

./: .travis.yml  AUTHORS  CHANGES  CONTRIBUTORS  Cargo.toml  README.md  index.html  search-index.js
distance/: enum.DistanceError.html  fn.damerau_levenshtein.html  fn.hamming.html  fn.levenshtein.html  fn.sift3.html  index.html  sidebar-items.js
distance/damerau_levenshtein/: fn.damerau_levenshtein.html  sidebar-items.js
distance/errors/: enum.DistanceError.html  sidebar-items.js
distance/hamming/: fn.hamming.html  sidebar-items.js
distance/levenshtein/: fn.levenshtein.html  sidebar-items.js
distance/sift3/: fn.sift3.html  sidebar-items.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
src/: damerau_levenshtein.rs  errors.rs  hamming.rs  levenshtein.rs  lib.rs  sift3.rs  utils.rs
src/distance/src/: damerau_levenshtein.rs.html  errors.rs.html  hamming.rs.html  levenshtein.rs.html  lib.rs.html  sift3.rs.html  utils.rs.html
